crates/mdroots-syntax/tests/snapshots/zkvault__reference__gardening.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: Some(
        FmSummary {
            format: Yaml,
            error: None,
            entries: [
                (
                    "title",
                    Str(
                        "Gardening",
                    ),
                ),
                (
                    "date",
                    Str(
                        "2026-03-04",
                    ),
                ),
                (
                    "tags",
                    List(
                        [
                            "hobby",
                            "garden",
                        ],
                    ),
                ),
            ],
        },
    ),
    headings: [
        HeadingSummary {
            level: 1,
            text: "Gardening",
            slug: "gardening",
            id: None,
            custom_id: None,
        },
        HeadingSummary {
            level: 2,
            text: "Intro",
            slug: "intro",
            id: None,
            custom_id: None,
        },
        HeadingSummary {
            level: 2,
            text: "Usage",
            slug: "usage",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: Wiki,
            context: Prose,
            confidence: Explicit,
            raw: "reference/composting",
            path: "reference/composting",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[reference/composting]]",
            text_range: "reference/composting",
            src_line: 10,
        },
        LinkSummary {
            kind: Wiki,
            context: InlineCode,
            confidence: Explicit,
            raw: "not-a-link",
            path: "not-a-link",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[not-a-link]]",
            text_range: "not-a-link",
            src_line: 14,
        },
        LinkSummary {
            kind: BarePath,
            context: Prose,
            confidence: Implicit,
            raw: "pub/sub",
            path: "pub/sub",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "pub/sub",
            text_range: "pub/sub",
            src_line: 14,
        },
        LinkSummary {
            kind: BarePath,
            context: Prose,
            confidence: Implicit,
            raw: "pros/cons",
            path: "pros/cons",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "pros/cons",
            text_range: "pros/cons",
            src_line: 14,
        },
        LinkSummary {
            kind: Wiki,
            context: CodeBlock,
            confidence: Explicit,
            raw: "also-not-a-link",
            path: "also-not-a-link",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[[also-not-a-link]]",
            text_range: "also-not-a-link",
            src_line: 17,
        },
        LinkSummary {
            kind: Url,
            context: Prose,
            confidence: External,
            raw: "https://example.com/gardening",
            path: "https://example.com/gardening",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "https://example.com/gardening",
            text_range: "https://example.com/gardening",
            src_line: 20,
        },
        LinkSummary {
            kind: Autolink,
            context: Prose,
            confidence: External,
            raw: "https://example.com/docs",
            path: "https://example.com/docs",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "<https://example.com/docs>",
            text_range: "https://example.com/docs",
            src_line: 20,
        },
    ],
    tags: [
        TagSummary {
            name: "hobby",
            syntax: Frontmatter,
            range: "hobby",
        },
        TagSummary {
            name: "garden",
            syntax: Frontmatter,
            range: "garden",
        },
        TagSummary {
            name: "hobby",
            syntax: Hash,
            range: "#hobby",
        },
        TagSummary {
            name: "garden/beds",
            syntax: Hash,
            range: "#garden/beds",
        },
    ],
    link_defs: [],
}
